@@ -12,6 +12,9 @@ What's New in Python 2.6.5
 Core and Builtins
 -----------------
 
+- Issue #7649: Fix u'%c' % char for character in range 0x80..0xFF, raise an
+  UnicodeDecodeError
+
 - Issue #5677: Explicitly forbid write operations on read-only file objects,
   and read operations on write-only file objects.  On Windows, the system C
   library would return a bogus result; on Solaris, it was possible to crash
